--- a/.gitignore
+++ b/.gitignore
@@ -301,3 +301,5 @@ FTAnalyzer.Shared/Core/FamilyTree_BASE_18756.cs
 FTAnalyzer.Shared/Core/FamilyTree_LOCAL_18756.cs
 FTAnalyzer.Shared/Core/FamilyTree_REMOTE_18756.cs
 FTAnalyzer.Shared/Core/FamilyTree_BACKUP_18756.cs
+
+*.bak
